<?xml version="1.0"?>
<package format="3">
  <name>isuzu_common_sensor_launch</name>
  <version>0.1.0</version>
  <description>The isuzu_common_sensor_launch package</description>
  <maintainer email="sena@leodrive.ai">Sena Golcuk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>velodyne_driver</exec_depend>
  <exec_depend>velodyne_monitor</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
