<?xml version="1.0"?>
<package format="3">
  <name>isuzu_sensor_launch</name>
  <version>0.1.0</version>
  <description>The isuzu_sensor_launch package</description>
  <maintainer email="sena@leodrive.ai">Sena Golcuk</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>isuzu_sensor_description</buildtool_depend>

  <exec_depend>isuzu_common_sensor_launch</exec_depend>
  <exec_depend>gnss_poser</exec_depend>
  <exec_depend>pointcloud_preprocessor</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
